fixed some minor padding and scroll issues on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,7 @@
 
 .content {
     flex: 1;
-    padding: 0 20px 20px;
+    padding: 0 20px 40px;
     margin-top: 60px;
     /* Ensure space for the fixed search bar and counters */
     overflow-y: auto;
@@ -99,8 +99,9 @@
         transform: translateX(-100%);
         transition: transform 0.3s ease;
         background-color: #1e1e1e;
-        padding: 20px;
+        padding: 20px 20px 40px;
         box-sizing: border-box;
+        overflow-y: scroll;
     }
 
     .App.sidebar-open .sidebar {
@@ -108,8 +109,8 @@
     }
 
     .content {
-        padding: 10px;
-        margin-top: 0;
+        padding: 10px 10px 60px;
+        margin-top: 60px;
     }
 
     .burger-menu {
@@ -174,5 +175,9 @@
     .tag-button {
         flex: 1;
         margin: 5px;
+    }
+
+    .content {
+        margin-top: 100px;
     }
 }
